--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
 		<!-- <artifactId>omnifaces</artifactId> -->
 		<!-- <version>${omnifaces.version}</version> -->
 		<!-- </dependency> -->
+		
+		<dependency>
+		    <groupId>javax.json</groupId>
+		    <artifactId>javax.json-api</artifactId>
+		    <version>1.0</version>
+		</dependency>
 
 		<!-- Test -->
 		<dependency>
