minor changes to user interface

--- a/src/main/resources/MessageResources.properties
+++ b/src/main/resources/MessageResources.properties
@@ -1,3 +1,5 @@
 default.save.success=Saved!
 default.remove.success=Removed!
 default.error=Error!
+
+transaction.duplicate.empty=Select at least one transaction!
